win-nightlight-cli/src/snapshots/wnl__tests__schedule_set_hours_outside.snap
---
source: win-nightlight-cli/src/main.rs
expression: output
---
schedule set to set hours, 21:00 to 07:00; the current time is outside this window
