win-nightlight-cli/src/snapshots/wnl__tests__schedule_sunset_inside.snap
---
source: win-nightlight-cli/src/main.rs
expression: output
---
schedule set to sunset to sunrise, 19:17 to 06:38; the current time is inside this window
